Updated scrollbar style, began wiring the professional projects page, fixed bug where the div for the fun alert would prevent interacting with other elements, added OSPI project component.

--- a/mysite/src/Components/UIElements/LoadingCode.module.css
+++ b/mysite/src/Components/UIElements/LoadingCode.module.css
@@ -8,6 +8,7 @@
   top: 4rem;
   position: absolute;
   overflow: hidden;
+  z-index: -1;
 }
 
 .loadingDivShow {
